--- a/_config.yml
+++ b/_config.yml
@@ -38,13 +38,13 @@ avatar: "img/marine.PNG"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#a8caff"
+navbar-col: "#f0f0f0"
 navbar-text-col: "#404040"
-navbar-children-col: "#a8caff"
+navbar-children-col: "#f0f0f0"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#a8caff"
+footer-col: "#f0f0f0"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 
