--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- General options --- #
 
 # Name of website
-title: Daniel's Profolio
+title: Daniel's Porfolio
 
 # Short description of your site
 description: My Data Science Porfolio
